# ambient-weather-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEBUG_LOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yml  secret-scan.yml
kubernetes/: deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml.example  service.yaml  servicemonitor.yaml
src/: __init__.py  __main__.py  keyring_store.py  server.py  setup_keys.py
