[project]
name = "ambient-weather-mcp"
version = "0.1.0"
description = "MCP server for Ambient Weather personal weather station data"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0,<2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "safety>=3.7.0",
    "semgrep>=1.136.0",
]
